--- a/jamarts.html
+++ b/jamarts.html
@@ -242,7 +242,7 @@
 
 
      <!--  FOOTER SECTION-->
-       <footer class="footer-section" >
+      <!--- <footer class="footer-section" >
         <div class="section-content">
             <p class="copyright-text">JamArts</p>
 
@@ -260,6 +260,37 @@
 
         </div>
        </footer>
+      = --->
+       <footer class="footer">
+  <div class="footer-container">
+    <div class="footer-about">
+      <h3>JamArts</h3>
+      <p>Bringing imagination to life through art, design, and creativity. Let your brand stand out with JamArts.</p>
+    </div>
+
+    <div class="footer-links">
+      <h4>Useful Links</h4>
+      <ul>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <h4>Contact Us</h4>
+      <p>Email: jamarts@example.com</p>
+      <p>Phone: +256 712 345 678</p>
+      <p>Location: Kampala, Uganda</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 JamArts. All rights reserved.</p>
+  </div>
+</footer>
+
 
      </main>
      
